--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -21,6 +21,7 @@
     "hapi": "^17.8.4",
     "inert": "^5.1.3",
     "jsonwebtoken": "8.2.0",
+    "node-fetch": "^3.0.0",
     "request": "^2.88.2",
     "selfsigned": "^1.10.11"
   }
