--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -11,17 +11,17 @@
     "twitch",
     "extension"
   ],
-  "author": "Emily Rose <amorelandra@twitch.tv>",
+  "author": "Jeffrey T. Fritz <jfritz@kliptok.com>",
   "license": "Apache-2.0",
   "dependencies": {
     "boom": "7.2.0",
     "color": "3.0.0",
     "commander": "2.15.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "hapi": "^17.8.4",
-    "inert": "^5.1.3",
+    "express": "^4.17.1",
     "jsonwebtoken": "8.2.0",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^2.0.0",
     "request": "^2.88.2",
     "selfsigned": "^1.10.11"
   }
