--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "8.2.0",
+    "mustache": "^4.2.0",
     "node-fetch": "^2.0.0",
     "request": "^2.88.2",
     "selfsigned": "^1.10.11"
