--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -21,11 +21,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "jsonwebtoken": "8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mustache": "^4.2.0",
     "node-fetch": "^2.0.0",
     "nodemon": "^2.0.15",
-    "request": "^2.88.2",
     "selfsigned": "^1.10.11"
   }
 }
