--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "extension-hello-world",
-  "version": "0.1.3",
-  "description": "Simple Hello World Twitch Extension",
+  "name": "extension-kliptokdock-ebs",
+  "version": "0.1.4",
+  "description": "Twitch Extension Backend Service for KlipTokDock",
   "main": "index.js",
   "scripts": {
     "cert": "node bin/generate_cert.js server",
@@ -14,6 +14,7 @@
   "author": "Jeffrey T. Fritz <jfritz@kliptok.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@progress/kendo-ui": "^2021.3.1109",
     "boom": "7.2.0",
     "color": "3.0.0",
     "commander": "2.15.0",
