--- a/KlipTok.Dock/package.json
+++ b/KlipTok.Dock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extension-kliptokdock-ebs",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "Twitch Extension Backend Service for KlipTokDock",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,8 @@
     "mustache": "^4.2.0",
     "node-fetch": "^2.0.0",
     "nodemon": "^2.0.15",
-    "selfsigned": "^1.10.11"
+    "selfsigned": "^1.10.11",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
